--- a/index.html
+++ b/index.html
@@ -26,8 +26,24 @@
 
             </nav>
         </div>
+        <div class="hamCross">
+            <i id="ham" class="fa-solid fa-bars"></i>
+            <i id="cross" class="fa-solid fa-xmark"></i>
+        </div>
 
     </div>
+
+    <div class="wrapdiv">
+        <nav class="wrapbar">
+            <ul class="wlist">
+                <li class="list"><a href="#home">home</a></li>
+                <li class="list"><a href="#services">services</a></li>
+                <li class="list"><a href="#blog">blog</a></li>
+                <li class="list"><a href="#portfolio">portfolio</a></li>
+                <li class="list"><a href="#contact">contact</a></li>
+            </ul>
+
+        </nav>
 
    </header> 
 
